[gd_scene format=3 uid="uid://va5fwaseqhn1"]

[ext_resource type="Texture2D" uid="uid://bjqltysfbg7is" path="res://Assets/Flip.png" id="1_wrm1d"]
[ext_resource type="Texture2D" uid="uid://3igy7ct7aneb" path="res://Assets/Tails.png" id="2_3dryh"]
[ext_resource type="Script" uid="uid://r41opdtwy6gp" path="res://Scripts/coin.gd" id="2_i6g32"]
[ext_resource type="Texture2D" uid="uid://cedoyw4a0g354" path="res://Assets/Button_Press.png" id="3_i6g32"]
[ext_resource type="Texture2D" uid="uid://d0kvgy4le7ftb" path="res://Assets/Heads.png" id="3_wowpa"]

[sub_resource type="GDScript" id="GDScript_wowpa"]

[node name="Game" type="Control" unique_id=1454853135]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = SubResource("GDScript_wowpa")

[node name="Coin" type="Node2D" parent="." unique_id=298752282]
script = ExtResource("2_i6g32")

[node name="ResultLabel" type="Label" parent="Coin" unique_id=1038527859]
offset_left = -116.0
offset_top = 101.0
offset_right = 104.5
offset_bottom = 180.5
horizontal_alignment = 1

[node name="FlipButton" type="TextureButton" parent="Coin" unique_id=1664029441]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = 281.0
offset_right = 1262.0
offset_bottom = 699.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.4)
texture_normal = ExtResource("1_wrm1d")
texture_pressed = ExtResource("3_i6g32")

[node name="SpriteHolder" type="Node2D" parent="Coin" unique_id=1282673209]

[node name="Heads" type="Sprite2D" parent="Coin/SpriteHolder" unique_id=32638742]
position = Vector2(1, -220)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_wowpa")

[node name="Tails" type="Sprite2D" parent="Coin/SpriteHolder" unique_id=1002695131]
position = Vector2(1, -220)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_3dryh")
